Sync all content

--- a/content/resources/res-21g-506.md
+++ b/content/resources/res-21g-506.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/res-21g-506-kanji-learning-any-time-any-place-for-japanese-vi-spring-2021/cb8e1aff341a8c610d2d664c7d4abb63_res-21g-506.jpg
 file_size: 33903
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "\"\u679C\" is a shokei moji (\u8C61\u5F62\u6587\u5B57) among the 1026\
     \ kyoiku kanji (\u6559\u80B2\u6F22\u5B57), the most commonly used kanji. (Image\
